--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  web:
+  fastapi:
     build:
       context: ..
       dockerfile: docker/Dockerfile
@@ -11,14 +11,14 @@ services:
     volumes:
       - ../:/app
     depends_on:
-      - db
+      - fastapi-db
     environment:
-      - DATABASE_URL=mysql+pymysql://user:password@db:3306/dbname
+      - DATABASE_URL=mysql+pymysql://user:password@fastapi-db:3306/dbname
       - SECRET_KEY="your-secret-key"
     networks:
       - app-network
 
-  db:
+  fastapi-db:
     image: mysql:8.0
     platform: linux/amd64 #only for MAC chip M
     ports:
